fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,5 +15,5 @@
 }
 
 body {
-	background-color: black;
+	@apply dark:bg-black;
 }
